--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IndependenceDay-Timer</title>
-<link rel="stylesheet" href="Day15_indepencedayTimer.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
-<Script src="Day15_indepencedayTimer.js"></Script>
+<Script src="script.js"></Script>
 
 </body>
 </html>
